# rozoom

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  NOTICE.md  README.md  ROADMAP.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cicd.yml  code-signing.draft.yml  workloads-perf-budget.yml
dashboard-app/: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile_linux_new.ver  PHILOSOPHY.md  README.md  SECURITY.md  components.json  docker-compose.yml  download-binaries.js  eslint.config.mjs  package.json  playwright.config.ts  playwright.local.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.js
dashboard-app/.husky/: pre-commit
dashboard-app/docs/: README.md  access-control.md  cluster-manager.md  cluster-ops.md  compatibility.md  configuration.md  custom-resources.md  dashboard.md  enterprise-readiness.md  everyday-tasks.md  global-triage.md  jordan-first-ux-initiative.md  killer-features.md  network.md  observability.md  overview.md  plugins.md  runtime-operations.md  security-compliance.md  storage.md  who-is-rozoom-for.md  workloads.md
dashboard-app/e2e/: critical-user-journeys.spec.ts  (+24 more)
dashboard-app/src-tauri/: Cargo.toml  build.rs  desktop-template.desktop  tauri.conf.json
dashboard-app/src-tauri/capabilities/: default.json
dashboard-app/src-tauri/sidecar-wrappers/: az-wrapper.c  gcloud-wrapper.c
dashboard-app/src-tauri/src/: main.rs
(+1452 files in other folders)
