[package]
name = "rozoom-k8s-linter-ide"
description = "A Tauri App"
version = "0.21.0-rc.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dashboard_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
muda = "0.16"

[dependencies]
tauri = { version = "2.9", features = ["devtools"] }
tokio = { version = "1", features = ["full"] }
dirs = "6.0.0"
log = "0.4"

tauri-plugin-log = "2.8"
tauri-plugin-store = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-http = "2.5"
tauri-plugin-dialog = "2.6"
tauri-plugin-window-state = "2.4"
tauri-plugin-opener = "2.0"

tauri-plugin-cache = "0.1.5"
